# cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "warpgate",
    "warpgate-admin",
    "warpgate-common",
    "warpgate-core",
    "warpgate-db-migrations",
    "warpgate-db-entities",
    "warpgate-database-protocols",
    "warpgate-protocol-http",
    "warpgate-protocol-mysql",
    "warpgate-protocol-postgres",
    "warpgate-protocol-ssh",
    "warpgate-sso",
    "warpgate-web",
]
default-members = ["warpgate"]
resolver = "2"

[workspace.dependencies]
bytes = "1.4"
data-encoding = "2.3"
serde = "1.0"
serde_json = "1.0"
russh = { version = "0.50.0", features = ["des"] }
tracing = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-rustls = "0.26"
enum_dispatch = "0.3.13"
rustls = "0.23"

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[profile.coverage]
inherits = "dev"
# rustflags = ["-Cinstrument-coverage"]
