# cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "warpgate",
    "warpgate-admin",
    "warpgate-common",
    "warpgate-core",
    "warpgate-db-migrations",
    "warpgate-db-entities",
    "warpgate-database-protocols",
    "warpgate-protocol-http",
    "warpgate-protocol-mysql",
    "warpgate-protocol-postgres",
    "warpgate-protocol-ssh",
    "warpgate-sso",
    "warpgate-web",
]
default-members = ["warpgate"]
resolver = "2"

[workspace.dependencies]
bytes = "1.4"
data-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
russh = { version = "0.50.2", features = ["des"] }
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-rustls = "0.26"
enum_dispatch = "0.3.13"
rustls = "0.23"
sqlx = { version = "0.8", features = ["tls-rustls-aws-lc-rs"] }
sea-orm = { version = "1.0", default-features = false, features = ["runtime-tokio", "macros"] }
sea-orm-migration = { version = "1.0", default-features = false, features = [
    "cli",
] }
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "websocket",
    "rustls",
    "embed",
] }
password-hash = { version = "0.4", features = ["std"] }
delegate = "0.13"
tracing = "0.1"
schemars = "0.9.0"

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[profile.coverage]
inherits = "dev"
# rustflags = ["-Cinstrument-coverage"]
