# cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "warpgate",
    "warpgate-admin",
    "warpgate-common",
    "warpgate-core",
    "warpgate-db-migrations",
    "warpgate-db-entities",
    "warpgate-database-protocols",
    "warpgate-protocol-http",
    "warpgate-protocol-kubernetes",
    "warpgate-protocol-mysql",
    "warpgate-protocol-postgres",
    "warpgate-protocol-ssh",
    "warpgate-sso",
    "warpgate-web",
]
default-members = ["warpgate"]
resolver = "2"

[workspace.dependencies]
bytes = { version = "1.4", default-features = false }
data-encoding = { version = "2.3", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
russh = { version = "0.54.3", features = ["des", "rsa", "aws-lc-rs"], default-features = false }
futures = { version = "0.3", default-features = false }
tokio-stream = { version = "0.1.17", features = ["net"], default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
enum_dispatch = { version = "0.3.13", default-features = false }
rustls = { version = "0.23", default-features = false }
sqlx = { version = "0.8", features = ["tls-rustls-aws-lc-rs"], default-features = false }
sea-orm = { version = "1.0", default-features = false, features = ["runtime-tokio", "macros"] }
sea-orm-migration = { version = "1.0", default-features = false, features = [
    "cli",
] }
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "websocket",
    "rustls",
    "embed",
    "server",
], default-features = false }
hex = { version = "0.4", default-features = false }
poem-openapi = { version = "5.1", features = [
    "stoplight-elements",
    "chrono",
    "uuid",
    "static-files",
    "cookie",
], default-features = false }
password-hash = { version = "0.5", features = ["std"], default-features = false }
delegate = { version = "0.13", default-features = false }
tracing = { version = "0.1", default-features = false }
schemars = { version = "0.9.0", default-features = false, features = ["derive", "std"] }
rustls-pemfile = { version = "2.2", default-features = false }
thiserror = { version = "2", default-features = false }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", features = ["std"], default-features = false }
dialoguer = { version = "0.11", default-features = false, features = ["editor", "password"] }
tokio = { version = "1.20", features = ["tracing", "signal", "macros", "rt-multi-thread", "io-util"], default-features = false }
kube = { version = "0.96", features = ["client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.23", features = ["latest"], default-features = false }
governor = { version = "0.10.0", default-features = false, features = ["std", "quanta", "jitter"] }
rcgen = { version = "0.13", features = ["zeroize", "crypto", "aws_lc_rs", "pem", "x509-parser"], default-features = false }
x509-parser = { version = "0.17.0", default-features = false }
uuid = { version = "1.3", features = ["v4", "serde"], default-features = false }
reqwest = { version = "0.12", features = [
    "http2",                               # required for connecting to targets behind AWS ELB
    "rustls-tls-native-roots-no-provider",
    "stream",
    "gzip",
], default-features = false }

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[profile.coverage]
inherits = "dev"
# rustflags = ["-Cinstrument-coverage"]
