[tool.poetry]
name = "e2e"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
