[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-admin"
version = "0.18.0"

[dependencies]
anyhow = { version = "1.0", features = ["std"], default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes.workspace = true
chrono = { version = "0.4", default-features = false }
futures.workspace = true
hex.workspace = true
mime_guess = { version = "2.0", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
russh.workspace = true
rust-embed = { version = "8.3", default-features = false }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
warpgate-ca = { version = "*", path = "../warpgate-ca" }
warpgate-common = { version = "*", path = "../warpgate-common" }
warpgate-tls = { version = "*", path = "../warpgate-tls" }
warpgate-core = { version = "*", path = "../warpgate-core" }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities" }
warpgate-ldap = { version = "*", path = "../warpgate-ldap" }
warpgate-protocol-ssh = { version = "*", path = "../warpgate-protocol-ssh" }
regex.workspace = true
