[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-admin"
version = "0.23.2"
publish = false

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
bytes.workspace = true
futures.workspace = true
hex.workspace = true
mime_guess = { version = "2.0", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
russh.workspace = true
rust-embed = { version = "8.3", default-features = false }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
warpgate-ca = { path = "../warpgate-ca" }
warpgate-common = { path = "../warpgate-common" }
warpgate-common-http = { path = "../warpgate-common-http" }
warpgate-tls = { path = "../warpgate-tls" }
warpgate-core = { path = "../warpgate-core" }
warpgate-db-entities = { path = "../warpgate-db-entities" }
warpgate-ldap = { path = "../warpgate-ldap" }
warpgate-protocol-ssh = { path = "../warpgate-protocol-ssh" }
warpgate-protocol-kubernetes = { path = "../warpgate-protocol-kubernetes" }
ipnet = "2"
regex.workspace = true
