[package]
name = "warpgate-admin"
version = "0.26.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
ipnet = { version = "2", default-features = false }
mime_guess = { version = "2.0", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
rcgen.workspace = true
regex.workspace = true
russh.workspace = true
rust-embed = { version = "8.3", default-features = false }
rustls-pki-types.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
warpgate-ca = { path = "../warpgate-ca" }
warpgate-common = { path = "../warpgate-common" }
warpgate-common-http = { path = "../warpgate-common-http" }
warpgate-core = { path = "../warpgate-core" }
warpgate-db-entities = { path = "../warpgate-db-entities" }
warpgate-ldap = { path = "../warpgate-ldap" }
warpgate-protocol-kubernetes = { path = "../warpgate-protocol-kubernetes" }
warpgate-protocol-ssh = { path = "../warpgate-protocol-ssh" }
warpgate-tls = { path = "../warpgate-tls" }
