[package]
name = "warpgate-aws"
version = "0.22.0-beta.5"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
] }
aws-credential-types = { version = "1", default-features = false }
aws-sdk-ec2 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-ec2instanceconnect = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-eks = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-rds = { version = "1.130.0", default-features = false }
aws-sdk-sts = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sigv4 = { version = "1", default-features = false }
aws-smithy-runtime-api = { version = "1", default-features = false }
dashmap = { version = "6.2", default-features = false }
data-encoding.workspace = true
http.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
