[package]
name = "warpgate-common-http"
version = "0.26.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
poem.workspace = true
poem-openapi.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
warpgate-common = { path = "../warpgate-common" }
warpgate-core = { path = "../warpgate-core" }
warpgate-db-entities = { path = "../warpgate-db-entities" }
