[package]
name = "warpgate-common-http"
version = "0.27.0-beta.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
data-encoding.workspace = true
poem.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
warpgate-common = { path = "../warpgate-common" }
warpgate-core = { path = "../warpgate-core" }
warpgate-db-entities = { path = "../warpgate-db-entities" }
