[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-common"
version = "0.20.0"

[[bin]]
name = "config-schema"
path = "src/config_schema.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.0", features = ["derive", "std"], default-features = false }
argon2 = { version = "0.5", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding.workspace = true
delegate.workspace = true
futures.workspace = true
git-version = { version = "0.3.9", default-features = false }
governor.workspace = true
humantime-serde = { version = "1.1", default-features = false }
once_cell = { version = "1.17", default-features = false }
password-hash.workspace = true
poem = { version = "3.1", features = ["rustls"], default-features = false }
poem-openapi.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
rand.workspace = true
rcgen.workspace = true
russh.workspace = true
rustls-native-certs = { version = "0.8", default-features = false }
rustls-pki-types.workspace = true
rustls.workspace = true
schemars.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
totp-rs = { version = "5.0", features = ["otpauth"], default-features = false }
tracing-core = { version = "0.1", default-features = false }
tracing.workspace = true
url = { version = "2.2", default-features = false }
uuid.workspace = true
warpgate-ca = { version = "*", path = "../warpgate-ca", default-features = false }
warpgate-ldap = { version = "*", path = "../warpgate-ldap" }
warpgate-sso = { version = "*", path = "../warpgate-sso", default-features = false }
warpgate-tls = { version = "*", path = "../warpgate-tls", default-features = false }
webpki = { version = "0.22", default-features = false }
x509-parser = "0.17.0"
