[package]
name = "warpgate-core"
version = "0.26.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]

anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
bytes.workspace = true
data-encoding.workspace = true
dialoguer.workspace = true
enum_dispatch.workspace = true
futures.workspace = true
governor.workspace = true
humantime-serde = { version = "1.1", default-features = false }
ipnet.workspace = true
ldap3.workspace = true
packet = { version = "0.1", default-features = false }
password-hash.workspace = true
png = "0.18"
poem.workspace = true
poem-openapi.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["json"] }
russh.workspace = true
rustls.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
totp-rs = { version = "5.0", features = ["otpauth"], default-features = false }
tracing.workspace = true
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url.workspace = true
uuid.workspace = true
warpgate-common = { path = "../warpgate-common" }
warpgate-db-entities = { path = "../warpgate-db-entities" }
warpgate-db-migrations = { path = "../warpgate-db-migrations" }
warpgate-ldap = { path = "../warpgate-ldap" }
warpgate-tls = { path = "../warpgate-tls" }
warpgate-sso = { path = "../warpgate-sso", default-features = false }
webpki = { version = "0.22", default-features = false }
zune-jpeg = "0.4"

[features]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
