[package]
name = "warpgate-database-protocols"
version = "0.26.0-beta.1"
description = "Core of SQLx, the rust SQL toolkit. Just the database protocol parts."
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bitflags = { version = "2", default-features = false }
bytes.workspace = true
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "sink",
] }
memchr = { version = "2.8", default-features = false }
thiserror.workspace = true
tokio.workspace = true
