[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-entities"
version = "0.20.2"

[dependencies]
bytes = { version = "1.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
poem-openapi.workspace = true
sqlx.workspace = true
sea-orm = { workspace = true, features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
secrecy = "0.10"
warpgate-tls = { version = "*", path = "../warpgate-tls", default-features = false }
warpgate-ldap = { version = "*", path = "../warpgate-ldap" }
