[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-entities"
version = "0.22.0-beta.6"
publish = false

[dependencies]
bytes = { version = "1.4", default-features = false }
poem-openapi.workspace = true
sqlx.workspace = true
ipnet.workspace = true
sea-orm = { workspace = true, features = [
    "macros",
    "with-uuid",
    "with-json",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
warpgate-common = { path = "../warpgate-common", default-features = false }
secrecy = "0.10"
warpgate-tls = { path = "../warpgate-tls", default-features = false }
warpgate-ldap = { path = "../warpgate-ldap" }
