[package]
name = "warpgate-db-entities"
version = "0.26.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
bytes = { version = "1.4", default-features = false }
ipnet.workspace = true
poem-openapi.workspace = true
sea-orm = { workspace = true, features = ["macros", "with-uuid", "with-json"] }
secrecy = { version = "0.10", default-features = false }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-ldap = { path = "../warpgate-ldap", default-features = false }
warpgate-tls = { path = "../warpgate-tls", default-features = false }
