[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-migrations"
publish = false
version = "0.18.0"

[lib]

[dependencies]
tokio.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding.workspace = true
regex.workspace = true
sea-orm = { workspace = true, features = [
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
sea-orm-migration.workspace = true
russh.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
warpgate-ca = { version = "*", path = "../warpgate-ca", default-features = false }

[features]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
