[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-db-migrations"
version = "0.23.1"
publish = false

[lib]

[dependencies]
tokio.workspace = true
data-encoding.workspace = true
regex.workspace = true
sea-orm = { workspace = true, features = [
    "with-uuid",
    "with-json",
], default-features = false }
sea-orm-migration.workspace = true
russh.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
warpgate-ca = { path = "../warpgate-ca", default-features = false }

[features]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
