[package]
name = "warpgate-db-migrations"
version = "0.26.0-beta.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]

[dependencies]
data-encoding.workspace = true
regex.workspace = true
russh.workspace = true
sea-orm = { workspace = true, features = ["with-uuid", "with-json"] }
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
warpgate-ca = { path = "../warpgate-ca", default-features = false }

[features]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
